--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,20 +30,20 @@
     <div class="book-grid">
         <div class="book">
             <img src="https://picsum.photos/200/300" alt="book">
-            <h4>Tytuł książki</h4>
-            <p>Autor</p>
+            <h4>Circe</h4>
+            <p>Madeline Miller</p>
         </div>
 
         <div class="book">
             <img src="https://picsum.photos/200/301" alt="book">
-            <h4>Inna książka</h4>
-            <p>Autor</p>
+            <h4>Last night I sang to a monster</h4>
+            <p>Benjamin Alire Saenz</p>
         </div>
 
         <div class="book">
             <img src="https://picsum.photos/200/302" alt="book">
-            <h4>Bestseller</h4>
-            <p>Autor</p>
+            <h4>Scythe</h4>
+            <p>Neal Shusterman/p>
         </div>
     </div>
 </section>
