--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -74,7 +74,7 @@
     button {
         width: 100%;
         padding: 10px;
-        background-color: #4CAF50;
+        background-color: #6b21a8;;
         color: white;
         border: none;
         border-radius: 4px;
@@ -82,12 +82,12 @@
     }
 
     button:hover {
-        background-color: #45a049;
+        background-color: #6b21a8;;
     }
 
     a {
         text-decoration: none;
-        color: #4CAF50;
+        color: #6b21a8;;
     }
 
     a:hover {
