--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -124,16 +124,13 @@
                 <a th:href="@{'/books/' + ${book.id}}" class="book-btn" th:text="${book.title}">Book Title</a>
 
                 <!-- PRZYCISK USUŃ -->
-                <form th:action="@{'/libraries/' + ${library.id} + '/remove-book/' + ${book.id}}"
-                      method="post"
-                      style="margin-left:10px;">
-                    <input type="hidden" name="_method" value="delete"/>
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                    <!-- <button type="submit" class="remove-book-btn"
-                            onclick="return confirm('Are you sure you want to remove this book from the library?');">
-                        Remove
-                    </button> -->
+                <form th:action="@{/books/libraries/{libId}/remove-book/{bookId}(
+                    libId=${library.id},
+                    bookId=${book.id})}"
+                      method="post">
+                    <button type="submit">Remove book from custom library</button>
                 </form>
+
             </div>
 
             <span th:if="${#lists.isEmpty(library.books)}">No books yet</span>
