deleting authors now work

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
         <div class="book">
             <img src="https://picsum.photos/200/302" alt="book">
             <h4>Scythe</h4>
-            <p>Neal Shusterman/p>
+            <p>Neal Shusterman</p>
         </div>
     </div>
 </section>
