--- a/src/main/resources/templates/admin/authors/index.html
+++ b/src/main/resources/templates/admin/authors/index.html
@@ -28,12 +28,15 @@
         <td th:text="${author.id}"></td>
         <td th:text="${author.fullName}"></td>
         <td>
-            <a th:href="@{'/admin/authors/delete/' + ${author.id}}"
-               onclick="return confirm('Are you sure you want to delete this author?');">
-                Delete
-            </a>
+            <form th:action="@{/admin/authors/delete/{id}(id=${author.id})}" method="post"
+                  onsubmit="return confirm('Are you sure you want to delete this author?');">
+                <!-- CSRF token -->
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <button type="submit">Delete</button>
+            </form>
         </td>
     </tr>
+
     </tbody>
 </table>
 
