--- a/src/main/resources/templates/admin/books/index.html
+++ b/src/main/resources/templates/admin/books/index.html
@@ -28,10 +28,15 @@
         <td th:text="${book.title}"></td>
         <td th:text="${book.author.fullName}"></td>
         <td>
-            <a th:href="@{'/admin/books/delete/' + ${book.id}}"
-               onclick="return confirm('Are you sure you want to delete this book and all its reviews?');">
-                Delete
-            </a>
+            <form th:action="@{/admin/books/delete/{id}(id=${book.id})}" method="post"
+                  onsubmit="return confirm('Are you sure you want to delete this book and all its reviews?');">
+
+                <!-- CSRF token -->
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
+                <button type="submit">Delete</button>
+            </form>
+
         </td>
     </tr>
     </tbody>
